@@ -31,7 +31,7 @@ import (
 
 const (
 	_name             = "yarpcroundrobinfx"
-	_configurationKey = "yarpc.peers.roundrobin"
+	_configurationKey = "yarpc.choosers.roundrobin"
 )
 
 // Module produces a yarpcroundrobin peer list.
@@ -42,7 +42,7 @@ var Module = fx.Options(
 
 // Config is the configuration for constructing a set of round-robin peer.Choosers.
 type Config struct {
-	Peers map[string]RoundRobinConfig `yaml:",inline"`
+	Choosers map[string]RoundRobinConfig `yaml:",inline"`
 }
 
 // RoundRobinConfig is the configuration for constructing a specific round-robin peer.Chooser.
@@ -99,7 +99,7 @@ func NewList(p ListParams) (ListResult, error) {
 		choosers []yarpc.Chooser
 		lists    []yarpc.List
 	)
-	for name, c := range p.Config.Peers {
+	for name, c := range p.Config.Choosers {
 		dialer, ok := p.Provider.Dialer(c.Dialer)
 		if !ok {
 			return ListResult{}, fmt.Errorf("failed to resolve dialer %q", c.Dialer)
